# treedecomp

./: .gitignore  .vimsettings.vim  CMakeLists.txt  LICENSE.txt  README.md  example.cnf  example.dot  flake.nix  treedecompConfig.cmake.in
.github/workflows/: build.yml  nix.yml
cmake/: treedecompConfig-buildtree.cmake.in
html/: index.html  rsync.sh
scripts/: build_clang.sh  build_clang_analyze.sh  build_debug.sh  build_emscripten.sh  build_norm.sh  build_release.sh  build_static.sh  build_static_release.sh
src/: CMakeLists.txt  IFlowCutter.cpp  IFlowCutter.hpp  TreeDecomposition.cpp  TreeDecomposition.hpp  bitset.hpp  graph.cpp  graph.hpp  main.cpp  treedecomp_defs.hpp  treedecomp_export.hpp  utils.hpp
src/flow-cutter-pace17/src/: cell.cpp  cell.hpp  greedy_order.cpp  tree_decomposition.cpp
